--- a/style.css
+++ b/style.css
@@ -9,35 +9,271 @@
 
 
 body {
-    margin: 0;
-    padding: 0;
+    margin: 0px;
+    padding: 0px;
+    max-width: 500px;
     background-color: #f5f5f5;
     font-family: 'Merriweather', serif;
     font-size: 16px;
     line-height: 1.6;
 }
 
-
-/* HLAVICKA */
-
-.titulek {
-    font-family: 'Raleway', serif;
+.hlavicka {
+    background-image: url( images/island-hlavicka.jpg);
+    background-color: rgba(0, 0, 0, 0.5);
+    background-size: cover;
+    background-repeat: no-repeat;
+    /*max-width: 500px;*/
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: #f5f5f5;
+    padding:30px; 
+    margin: 0px;  
 }
 
 
+.titulek {
+    font-family: 'Raleway', serif;
+    font-size: 32px;
+    font-weight: 600; 
+ }
+
+.perex {
+    text-align: center;
+    margin:0px 15px;
+ }
+
+.bila {
+    width: 70px;
+    height: 1px;
+    margin-top: 10px;
+    background-color: white;
+    text-align: center;
+ }
+
+.autor {
+    font-size: 12px;
+    font-weight: 400px;
+    font-style: italic;
+}
 /* MENU */
 
+.menu {
+    display: block;
+    text-align: center;
+    padding: 20px 20px;
+    margin: 0px;
+}
 
+.menu li { 
+    list-style: none;
+    text-align: center;
+   border-bottom-style: groove;
+   border-bottom-width: 0.1px;
+   border-bottom-color: rgba(233, 233, 233, 0.238);
+}
 
+.menu a {
+   text-transform: uppercase;
+   text-decoration: none;
+   color: grey;
+   
+
+}
 
 /* OBSAH */
 
+.uvod ,
+.procestovat ,
+.videt  {
+  margin: 0px;
+  padding: 0px;
+}
 
+.modra {
+    background-color: dodgerblue;
+    margin-left: 0px;
+    margin-bottom: 20px;
+    width: 120px;
+    height: 3px;
+}
 
+h2{
+    padding:0px 20px;  
+}
 
+.popisek {
+text-align: center;
+color: grey;
+font-size: 12px;
+padding: 0px;
+margin: 0px;
+}
+
+.popisek a{
+    font-weight:  600; 
+    text-decoration: underline; 
+    color: grey;
+}
+
+p {
+    font-size: 14px;
+    text-align: left;
+    padding:0px 20px;
+}
+
+img {
+    max-width:100%;
+    padding: 0px;
+    margin: 0px;
+}
 /* FOTOGALERIE */
 
+.galerie {
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+}
 
+.foto img {
+  width: 500px;
+  margin:15px 0px 0px 0px;
+}
 
+.galerie .popisek {
+    font-size: 14px;
+    font-weight: 800;
+    line-height: 1,1;
 
+}
+.galerie .popisek-copy {
+    font-size: 10px;
+    font-weight: 600;
+}
 /* PATICKA */
+.paticka {
+   /* display: flex;
+    flex-direction: column;
+    align-content: flex-start;*/
+    color: grey;
+    background-color: rgba(214, 214, 214, 0.616);
+    font-size: 10px;
+}
+
+.text-paticka,
+.uvodni-foto {
+    color: grey;
+    font-size: 10px;
+}
+
+.paticka a{
+    color: grey;
+    font-size: 10px;
+}
+/*text uvodní foto je stále stylováno podle všeobecného p, ačkoli je uzavřeno v divu .patička.Proč? */
+
+@media (min-width: 500px) {
+   body { 
+       max-width: 1000px;
+   }
+    .hlavicka {
+        width: 100%;
+    }
+    .titulek {
+        font-size: 48px;
+    }
+
+    .menu {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        margin-top: 20px;
+        padding: 5px 20px;
+        border-bottom-style: groove;
+        border-bottom-width: 0.1px;
+        border-bottom-color: rgba(233, 233, 233, 0.238);
+        border-top-style: groove;
+        border-top-width: 0.1px;
+        border-top-color: rgba(233, 233, 233, 0.238);
+    }
+
+    .menu li {
+        border-bottom-style: none;
+     }
+
+.uvod img,
+.procestovat img,
+.videt img {
+        position: relative;
+    }
+
+.uvod .popisek,
+.procestovat .popisek,
+.videt .popisek {
+        color: white;
+        position: relative;
+        top: -30px;
+        left: 220px;
+        font-size: 10px;
+    }
+
+.uvod .popisek a,
+.procestovat .popisek a,
+.videt .popisek a{
+    color:white;
+    font-size: 10px;
+}
+
+    .galerie {
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
+        flex-wrap: wrap;
+        max-width: 100%;
+    }
+
+    .foto {
+        width: 50%;
+        height: 0;
+        box-sizing: content-box;
+        overflow: hidden;
+       padding-bottom: 22%;
+    }
+
+   .foto img {
+       margin: 0px;
+       transition: 0.5s;
+      
+    }
+/*
+    img {
+        min-width: 250px;
+    }
+*/
+    .galerie .popisek-copy {
+        color: #f5f5f5;
+    }
+
+    .galerie .popisek {
+        background-color: rgba(0, 0, 0, 0.5);
+        color: #f5f5f5;
+        text-align: center;
+        transition: 300ms;
+       
+        
+    }
+    .galerie .popisek a{
+        color: #f5f5f5;
+
+    }
+    .galerie .foto:hover .popisek {
+        transform: translate(0, -100%);
+        transition: 300ms;
+    }
+
+    .galerie .foto:hover img{
+        transform: scale(1.2);
+        transition: 300ms;
+    }
+}
