--- a/style.css
+++ b/style.css
@@ -12,7 +12,6 @@ body {
     margin: 0px;
     padding: 0px;
     max-width: 500px;
-    background-color: #f5f5f5;
     font-family: 'Merriweather', serif;
     font-size: 16px;
     line-height: 1.6;
@@ -20,7 +19,6 @@ body {
 
 .hlavicka {
     background-image: url( images/island-hlavicka.jpg);
-    background-color: rgba(0, 0, 0, 0.5);
     background-size: cover;
     background-repeat: no-repeat;
     /*max-width: 500px;*/
@@ -30,6 +28,7 @@ body {
     color: #f5f5f5;
     padding:30px; 
     margin: 0px;  
+    
 }
 
 
@@ -44,12 +43,13 @@ body {
     margin:0px 15px;
  }
 
-.bila {
-    width: 70px;
+.perex::after {
+    content: " ";
+    display: block;
+    width: auto;
     height: 1px;
-    margin-top: 10px;
     background-color: white;
-    text-align: center;
+    margin: 10px 40% 0 40%;
  }
 
 .autor {
@@ -91,12 +91,13 @@ body {
   padding: 0px;
 }
 
-.modra {
+h2::after {
+    content: " ";
+    display: block;
     background-color: dodgerblue;
-    margin-left: 0px;
-    margin-bottom: 20px;
+    margin: 16px 0px;
     width: 120px;
-    height: 3px;
+    height: 2px;
 }
 
 h2{
@@ -153,11 +154,8 @@ img {
 }
 /* PATICKA */
 .paticka {
-   /* display: flex;
-    flex-direction: column;
-    align-content: flex-start;*/
     color: grey;
-    background-color: rgba(214, 214, 214, 0.616);
+    background-color:  #f5f5f5;
     font-size: 10px;
 }
 
@@ -176,6 +174,7 @@ img {
 @media (min-width: 500px) {
    body { 
        max-width: 1000px;
+     
    }
     .hlavicka {
         width: 100%;
@@ -201,7 +200,8 @@ img {
     .menu li {
         border-bottom-style: none;
      }
-
+     
+     
 .uvod img,
 .procestovat img,
 .videt img {
@@ -238,13 +238,13 @@ img {
         height: 0;
         box-sizing: content-box;
         overflow: hidden;
-       padding-bottom: 22%;
+        padding-bottom: 28%;
     }
 
    .foto img {
-       margin: 0px;
-       transition: 0.5s;
-      
+        display:block;
+        margin: 0px;
+        transition: 0.5s;
     }
 /*
     img {
@@ -259,21 +259,95 @@ img {
         background-color: rgba(0, 0, 0, 0.5);
         color: #f5f5f5;
         text-align: center;
-        transition: 300ms;
-       
-        
+       /* transform: translate(0, -100%);*/
+        transition: 300ms; 
     }
     .galerie .popisek a{
         color: #f5f5f5;
 
     }
-    .galerie .foto:hover .popisek {
+    .foto:hover .popisek {
         transform: translate(0, -100%);
         transition: 300ms;
     }
 
-    .galerie .foto:hover img{
+ .foto:hover img{
         transform: scale(1.2);
         transition: 300ms;
+    }
+}
+
+@media (min-width: 1000px) {
+    body {
+        min-width: 1000px;
+        background-color: #f5f5f5;
+    }
+
+    .hlavicka {
+        min-width: 100%;
+        position: relative;
+    }
+
+    .menu {
+        flex-direction: column;
+        border-top-width: 0px;
+        border-bottom-width: 0px;
+        margin-left: 95px;
+        position: absolute;
+        top: 340px;
+    }
+
+    .menu li { 
+        list-style: none;
+        text-align: left;
+        color: #f5f5f5;
+        border-bottom-style: groove;
+        border-bottom-width: 0.1px;
+        border-bottom-color: rgba(233, 233, 233, 0.238);
+    }
+
+    .menu a{
+        font-size: 14px;
+    }
+
+    h2 {
+        margin-top: -20px;
+    }
+
+    .uvod,
+    .videt,
+    .procestovat {
+        max-width: 960px;
+        margin: 0px 80px;  
+        border-bottom-width: 0px;
+        background-color:white;
+        top: -30px;
+        padding: 20px 0px;
+        position: relative;
+        box-shadow: 0px 4px 4px  rgba(200, 200, 200, 0.883);   
+    }
+
+    .uvod p,
+    .videt h2,
+    .videt p,
+    .videt .popisek
+    {
+        margin-left: 200px;
+    }
+
+    .procestovat p,
+    .procestovat .popisek{
+        margin-right: 200px;
+    }
+
+    .procestovat .popisek{
+        margin-right: -180px;
+    }
+    .galerie .foto {
+        width:33.333%;
+        padding-bottom: 19%;
+    }
+    .paticka {
+        background-color: #f5f5f5;
     }
 }
